Added surefire and failsafe plugins